fix photo display bug on safari

--- a/_sass/includes/photography.scss
+++ b/_sass/includes/photography.scss
@@ -6,8 +6,9 @@
     margin-top: 1rem;
     padding: .5rem 1rem 1rem 1rem;
     a, a:link, a:hover {
-    text-decoration: none;
-    color: black;
+        display: block;
+        text-decoration: none;
+        color: black;
     
     }
 
@@ -16,27 +17,19 @@
 
 .photo-item {
     display: grid;
-    grid-template-rows: 8fr 1fr 1.5fr;
+    max-width: 290px;
     border: 1px solid var(--photo-border-color);
     background-color: var(--photo-bg-color);
-    margin: 0;
-    height: 20rem;
 }
 
 
 .photo-item:hover {
-    box-shadow: .5em .6em var(--secondary-color);
+    box-shadow: .5rem .6rem var(--secondary-color);
     transform: translate3d(-15px,-10px, 0);
 }
 
 
 .photo-display {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 100%;
-    text-align: center;
     padding: 5%;
 }
 
@@ -77,14 +70,20 @@
     }
 
     .photo-display {
+        margin: auto;
         object-fit: fill;
         max-height: 17rem;    
+    }
+
+    .photo-date, .photo-title {
+        margin: auto 0.5rem !important;
     }
 
 
 }
 
-@media print, screen and (max-width: 1099px) and (min-width: 601px) {
+
+@media print, screen and (max-width: 1099px) and (min-width: 768px) {
     .photo-grid {
         padding: 0rem 1rem;
         column-gap: 1rem;
@@ -94,12 +93,13 @@
 }
 
 
-@media print, screen and (max-width: 600px) and (min-width: 100px) {
+@media print, screen and (max-width: 767px) and (min-width: 100px) {
     .photo-grid {
         grid-template-columns: 1fr;
         column-gap: 0;
         padding: 0 !important;
     
     }
+
 
 }
